--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,30 @@
   text-decoration: none;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.navbar {
+  width: 100%;
+  height: 80px;
+  background-color: rgba(0, 0, 0, .1);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+.links {
+  margin-right: 50px;
+  display: flex;
+  align-items: flex-start;
+}
+
+.links a {
+  text-decoration: none;
+  color: #666666;
+  margin-left: 20px;
+  font-size: 20px;
+}
+
+.links a:hover {
+  color: #000000;
+}
