--- a/src/App.css
+++ b/src/App.css
@@ -10,12 +10,13 @@
 .navbar {
   width: 100%;
   height: 80px;
-  background-color: rgba(0, 0, 0, .1);
+  background-color: #cecece;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   position: fixed;
+  z-index: 9999;
 }
 
 .links {
